test/Fail/Issue958.err
Issue958.agda:16.10-11: error: [UnequalTerms]
IsFunctor !=< map F
when checking that the expression F has type map F
